# pbuilder

./: .gitignore  Makefile  Makefile.include.in  README.md  configure.ac
c-ares/: Makefile
dnsmasq/: Makefile
dnsmasq/patches/: 001-Makefile.patch
dvb-apps/: Makefile
dvb-apps/patches/: 001-Makefile.patch
iproute2/: Makefile
iproute2/patches/: 001-musl.patch  002-etherip.patch  003-fprintf.patch
ipset/: Makefile
iptables/: Makefile
iptables/patches/: 001-TRIGGER-support.patch
libev/: Makefile
libiconv/: Makefile
libiconv/patches/: 001-musl.patch
libmnl/: Makefile
libnftnl/: Makefile
libosip2/: Makefile
n2n/: Makefile
nano/: Makefile
ncurses/: Makefile
ncurses/patches/: 001-gcc-5.1.patch
opennhrp/: Makefile
openssl/: Makefile
pingd/: Makefile
pingd/patches/: 001-fix-compile.patch
siproxd/: Makefile
siproxd/patches/: 001-types.patch
tvheadend/: Makefile
vlmcsd/: Makefile
zerotier/: Makefile
zerotier/patches/: 001-fix-compile-error.patch
zlib/: Makefile
